# hikari

./: .envrc  .gitignore  Cargo.toml  dprint.json  hikari.service
.github/workflows/: release.yaml
src/: main.rs
