[package]
name = "hikari"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
time = { version = "0.3", features = ["local-offset"] }
tracing = "0.1"
tracing-subscriber = "0.3"
zbus = "3"
